finalists spacing fixed in min lg

--- a/css/finalists.css
+++ b/css/finalists.css
@@ -10,7 +10,12 @@
     font-size: 10px !important;
 }
 
+@media only screen and (min-width: 992px) {
 
+    .min-lg-text-align-right {
+        text-align: right;
+    }
+}
 
 
 @media only screen and (max-width: 576px) {
